<resources>
    <string name="app_name">Roll The Dice</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="dice">Dice</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="count">0</string>
    <string name="roll_again">Roll again!</string>
    <string name="roll">Roll</string>
    <string name="dice_1">Dice 1</string>
    <string name="dice_2">Dice_2</string>
    <string name="dice_3">Dice_3</string>
    <string name="dice_4">Dice_4</string>
    <string name="dice_5">Dice_5</string>
    <string name="three_of_a_kind">3 of a kind!</string>
    <string name="five_of_a_kind">5 of a kind!</string>
    <string name="four_of_a_kind">4 of a kind!</string>
    <string name="full_house">Full house!</string>
    <string name="straight">Straight!</string>
    <string name="pair">Pair!</string>
    <string name="two_pairs">Two pairs!</string>
    <string name="nothing_special">Nothing special</string>
    <string name="add_the_dice">Add the Dice</string>
    <string name="roll_button">Roll button</string>
    <string name="welcome">Welcome!</string>
    <string name="red_button">Red button</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">
        <![CDATA[
        Roll the dice is free, simple and lightweight app
        <br><u>WITHOUT ADDS.</u></br><br/>
        <br> You can roll up to 5 dices and choose a color. Just tap the red button to roll. It is simple and easy to use. </br>
        <br>This app is useful when you need random number generation, play board games etc.</br><br/>
        <br>Features:</br>
        <br>* Roll up to 5 dices at once</br>
        <br>* Tap the red button to roll</br>
        <br>* Display total result on screen</br>
        <br>* Display combination names of 5 deices result:</br>
        <br/> One or two pairs; <br/>3, 4  and 5 of a kind; <br/>Straight; <br/>Full house.<br/><br/>
        Please contact me at dailiusprograming@gmail.com with questions, concerns or suggestions!
        ]]>
</string>
    <string name="choose_the_dice_collar">Choose the dice collar</string>
    <string name="choose_the_dice_number">Choose the dice number</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>