<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DiceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/ibtRedButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/txtCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sanchez"
                android:gravity="center"
                android:text="@string/count"
                android:textColor="@color/black"
                android:textSize="100sp" />

            <TextView
                android:id="@+id/txtCombination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sanchez_italic"
                android:gravity="center"
                android:paddingBottom="@dimen/padding_Normal_8dp"
                android:text="@string/roll_again"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_Normal_8dp">


                <ImageView
                    android:id="@+id/imgDice1"
                    android:layout_width="98dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/dice_1"
                    android:src="@drawable/wp_dice1"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/imgDice2"
                    android:layout_width="98dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/dice_2"
                    android:src="@drawable/wp_dice2"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/imgDice3"
                    android:layout_width="98dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/dice_3"
                    android:src="@drawable/wp_dice3"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgDice4"
                    android:layout_width="98dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/dice_4"
                    android:src="@drawable/wp_dice4"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/imgDice5"
                    android:layout_width="98dp"
                    android:layout_height="89dp"
                    android:contentDescription="@string/dice_5"
                    android:src="@drawable/wp_dice5"
                    android:visibility="visible" />

            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_the_dice"
            android:focusable="true"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/ibtRedButton"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:background="@color/white"
            android:contentDescription="@string/red_button"
            android:scaleType="centerCrop"
            android:src="@drawable/red_button_scd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>